# crazy-synth

./: Cargo.toml  README.md
src/: instrument.rs  main.rs  xypanel.rs
