[package]
name = "crazy-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
glow = "0.11.0"
glow_mesh = "0.1.2"
glutin = "0.28"
minirng = "0.1.0"
minvect = "0.1.3"
ringbuf = "0.2"
